@@ -1,3 +1,15 @@
+2001-08-07  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib/CGS4.pm: Add profile()
+
+	* Calib.pm (readnoise): Add readnoise support
+
+2001-08-06  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib.pm (thing): Add thingone and thingtwo
+
+	* Core.pm (orac_process_frame): use thingone and thingtwo
+
 2001-07-03  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/Michelle.pm: Comment out DINDEX
